--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-Sociomaterial Networks of COVID-19 Dynamics: Balancing Economy and Public Health with Artificial Intelligence
+## Sociomaterial Networks of COVID-19 Dynamics: Balancing Economy and Public Health with Artificial Intelligence
 
 Methods:
 
