--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
 ## Sociomaterial Networks of COVID-19 Dynamics: Balancing Economy and Public Health with Artificial Intelligence
 
-Methods:
+# head 1 Methods:
 
 Data Sources:
 
