--- a/readme
+++ b/readme
@@ -1,8 +1,8 @@
 ## Sociomaterial Networks of COVID-19 Dynamics: Balancing Economy and Public Health with Artificial Intelligence
 
-# head 1 Methods:
+### Methods:
 
-Data Sources:
+### Data Sources:
 
-Models:
+### Models:
 
